--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,7 @@
 
 .todo-item.completed label {
   color: #d9d9d9;
-  /* text-decoration line-through; */
+  text-decoration: line-through;
 }
 
 .todo-item .toggle {
