--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+body {
+  overflow: hidden;
+}
+
 .App-header {
-  min-height: 30vh;
+  min-height: 15vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,11 +19,13 @@
 
 .wrapper {
   width: 800px;
+  height: 100%;
   margin: 10px auto;
   font-size: 14px;
   background-color: rgba(255, 255, 255, 0.479);
   border: 0px solid #f1f1f1;
   padding: 20px;
+  overflow-y: auto;
 }
 
 .cover {
