--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,22 @@ body {
   align-items: center;
   justify-content: center;
   font-size: calc(20px + 2vmin);
-  ;
-  color: rgba(175, 47, 47, 0.438);
+  color: #f50057;
 }
 
 .App-header h1 {
   font-weight: 100;
+}
+
+.bg-change-button {
+  height: 100px;
+  line-height: 100px;
+  display: block;
+  text-align: center;
+  position: fixed;
+  top: 20px;
+  right: 50px;
+  z-index: 100;
 }
 
 .wrapper {
@@ -119,7 +129,7 @@ body {
   height: 40px;
   margin: auto 0;
   font-size: 30px;
-  color: #cc9a9a;
+  color: red;
   margin-bottom: 11px;
   transition: color 0.2s ease-out;
   background-color: transparent;
@@ -132,9 +142,9 @@ body {
 .footer {
   margin-top: 200px;
   text-align: center;
-  color: #bfbfbf;
+  color: #f50057;
   font-size: 10px;
-  text-shadow: 0 1px 0;
+  text-shadow: 0 0.1px 0;
 }
 
 .helper {
@@ -181,7 +191,7 @@ body {
 }
 
 .tabs *.actived {
-  border-color: rgba(175, 47, 47, 0.4);
+  border-color: #f50057;
   border-radius: 5px;
 }
 
